# parcae

./: .gitignore  Dockerfile  LICENSE  README.md  eval_chat.py  launch_interactive.sh  launch_job.slurm  pyproject.toml
.github/workflows/: docker.yml  pypi.yml
eval_configs/: eval-core-extended.yaml  eval-core.yaml  eval-lambada.yaml  eval-val-loss.yaml
launch_configs/: gpt-large-770m.yaml  gpt-medium-370m.yaml  gpt-small-140m.yaml  gpt-xlarge-1_3b.yaml  parcae-large-770m.yaml  parcae-medium-370m.yaml  parcae-small-140m.yaml  parcae-xlarge-1_3b.yaml
parcae_lm/: __init__.py  pyproject.toml  registry.py  tokenizer.py
parcae_lm/attention_backends/: __init__.py  flash_attention.py  interface.py
parcae_lm/configs/gpt/: gpt-large-770m.py  gpt-medium-370m.py  gpt-small-140m.py  gpt-xlarge-1_3b.py
parcae_lm/configs/parcae/: parcae-large-770m.py  parcae-medium-370m.py  parcae-small-140m.py  parcae-xlarge-1_3b.py
parcae_lm/models/: config.py  registry.py
parcae_lm/models/gpt/: __init__.py  config.py  gpt.py  init.py
parcae_lm/models/parcae/: __init__.py  config.py  init.py  parcae.py
parcae_lm/modules/: basic.py  blocks.py  injection.py  mixer.py  mlp.py
parcae_lm/ops/: __init__.py  linear_cross_entropy.py
parcae_lm/utils/: __init__.py  cache.py
receval/: settings.py
receval/models/: gpt.py  parcae.py
receval/tasks/: __init__.py  core_eval.py  core_extended_eval.py  lm_eval.py  val_loss.py
recpre/: __init__.py  data_loading_utils.py  huggingface_dataset.py  monitor.py  settings.py  utils.py
recpre/optim/: __init__.py  ellis_adam.py  ivon.py  lilith.py  lionw.py  muon_adamw.py  orthogonal_nesterov.py  simple_zero_redundancy.py  sophiag.py  zero_shampoo.py
recpre/schedulers/: __init__.py  base.py  constant.py  cosine.py  linear.py
runs/: run_batch_eval.sh  run_eval.sh  run_training.sh  sweep_recurrence.sh
scripts/: cost.py  download_data.py  eval.py  tok_eval.py  tok_train.py  train.py
